notebooks with descriptions

--- a/code/notebooks/1-Mask-Generation.ipynb
+++ b/code/notebooks/1-Mask-Generation.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces mask generation for input images. The quality of these masks is crucial, as they serve as the foundation for tasks such as inpainting, object removal, background replacement, and more. Our application supports masks generated via defined coordinates (using SAM) as well as through text prompts (using Grounded-SAM). In this notebook, we will provide a step-by-step guide to obtaining image masks using coordinates."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
@@ -37,6 +44,13 @@
     "plt.imshow(input_image)\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the cooridnates in the format \"x1, y1; x2, y2; ...\""
    ]
   },
   {
@@ -78,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image, ImageDraw\n",
+    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as patches\n",
     "\n",
@@ -102,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the SAM model (use facebook/sam-vit-base checkpoint)"
+    "Load and prepare the SAM model"
    ]
   },
   {
@@ -125,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Infer the model and select the mask with the highest IoU score"
+    "Infer the model and select the mask with the highest Intersection over Union (IoU) score."
    ]
   },
   {
