--- a/code/notebooks/2-Background-Blurring.ipynb
+++ b/code/notebooks/2-Background-Blurring.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces bacgrkound blurring for input images. This function allows for blurring the selected areas of the image, based on the estimated depth from the Depth-Anything model. The implementation allows for use of given masks, as well as automatic foregound mask generation using the RMBG-1.4 model. In this notebook, we will provide a step-by-step guide to blurring the image using foreground masking."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
@@ -43,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the blur and sharpen parameters"
+    "Set the blur and sharpen parameters of the image"
    ]
   },
   {
@@ -65,9 +72,6 @@
     "import os, sys\n",
     "\n",
     "input_image = input_image.convert(\"RGB\")\n",
-    "blur = int(blur)\n",
-    "sharpen = int(sharpen)\n",
-    "\n",
     "current_dir = os.getcwd()\n",
     "parent_dir = os.path.abspath(os.path.join(os.path.dirname(current_dir), '..'))\n",
     "sys.path.append(os.path.join(parent_dir, 'code'))"
@@ -98,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract the foreground image"
+    "Infer the model and extract the foreground element from the image"
    ]
   },
   {
@@ -161,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualise the foreground element"
+    "Visualise the foreground element in a form of mask"
    ]
   },
   {
@@ -179,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply blur to the image"
+    "Apply the depth-based blur to the image"
    ]
   },
   {
@@ -213,13 +217,20 @@
     "oimg = Image.fromarray(resized_image)\n",
     "mimg = Image.fromarray(prediction)\n",
     "\n",
-    "bimg = oimg.filter(ImageFilter.BoxBlur(int(boxBlur)))\n",
+    "bimg = oimg.filter(ImageFilter.BoxBlur(int(blur)))\n",
     "bimg = bimg.filter(ImageFilter.BLUR)\n",
     "for _ in range(sharpen):\n",
     "    bimg = bimg.filter(ImageFilter.SHARPEN)\n",
     "\n",
     "rimg = Image.composite(oimg, bimg, mimg)\n",
     "blurred_image = rimg.resize((image.shape[1], image.shape[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visusalise the blurred image, solely based on the depth measurements"
    ]
   },
   {
@@ -237,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Paste the original foreground on top of the blurred image to increase the quality"
+    "Paste the original foreground on top of the blurred image to increase the visual quality"
    ]
   },
   {
@@ -264,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final results"
+    "Visualise the final result"
    ]
   },
   {
@@ -276,13 +287,13 @@
     "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
     "axs[0].imshow(input_image)\n",
-    "axs[0].axis('off')  # Hide the axis\n",
-    "axs[0].set_title('Original image')  # Optionally set a title\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
     "\n",
     "# Display the second image in the right subplot\n",
     "axs[1].imshow(blurred_image)\n",
-    "axs[1].axis('off')  # Hide the axis\n",
-    "axs[1].set_title('Mask image')  # Optionally set a title\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Mask image')\n",
     "\n",
     "# Adjust layout to avoid overlap\n",
     "plt.tight_layout()\n",
