--- a/code/notebooks/3-Background-Replacement.ipynb
+++ b/code/notebooks/3-Background-Replacement.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Background replacement"
+    "# Background Replacement"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces bacgrkound replacement for input images. This function allows for replacing the background of the image. The implementation allows automatic foregound mask generation using the RMBG-1.4 model. In this notebook, we will provide a step-by-step guide to replacing the background of a given image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
@@ -48,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the number of steps"
+    "Define the number of the inference steps"
    ]
   },
   {
@@ -64,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the prompt for the background"
+    "Define the prompt for the background replacement"
    ]
   },
   {
@@ -80,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract foreground image and mask using RMBG-1.4 model"
+    "Extract foreground image and mask using the RMBG-1.4 model"
    ]
   },
   {
@@ -110,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the model"
+    "Load the Stable Diffusion model for inpainting"
    ]
   },
   {
@@ -133,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply dilation to the mask"
+    "Apply dilation to the mask, to enhance the the results and remove unwanted features, like shadows of the foreground element"
    ]
   },
   {
@@ -168,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Infer the model to the input image and obtained mask"
+    "Infer the model on the input image to obtain the foreground mask"
    ]
   },
   {
@@ -195,6 +202,35 @@
    "source": [
     "plt.imshow(resized_output_image)\n",
     "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visalise the final result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(resized_output_image)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
