--- a/code/notebooks/4-Eraser.ipynb
+++ b/code/notebooks/4-Eraser.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces object removal from the input images. The implementation incorporates mask selection using the SAM model and applies diffusion by making use of Latent Diffusion Model. In this notebook, we will provide a step-by-step guide to erasing the unwanted elements from a given image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
@@ -22,11 +29,37 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "input_path = '../inputs/eraser/bread.png'\n",
-    "mask_path = '../inputs/eraser/bread_mask.png'\n",
+    "input_path = '../inputs/eraser/oscar3.png'\n",
+    "input_image = Image.open(input_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generate a mask, using previously introduced SAM model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mask_sam import get_mask\n",
     "\n",
-    "input_image = Image.open(input_path)\n",
-    "mask_image = Image.open(mask_path)"
+    "mask_image = get_mask(input_image, ([[200, 400]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(mask_image)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
    ]
   },
   {
@@ -57,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the number of DDIM steps for generation"
+    "Define the number of inference steps"
    ]
   },
   {
@@ -73,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resize the original image to $512$ x $512$, which is necessary for the model"
+    "Resize the original image to $512$ x $512$, which is a prerequisite image size for the model"
    ]
   },
   {
@@ -122,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set up the configuration and model paths"
+    "Set up the configuration and model paths of Latent Diffusion"
    ]
   },
   {
@@ -166,6 +199,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Infer the model on the input image and mask to obtain the output image"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -205,10 +245,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(inpainted)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualise the inpainted image"
+    "Visualise the final result"
    ]
   },
   {
@@ -217,8 +268,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(inpainted)\n",
-    "plt.axis('off')\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(inpainted)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
