--- a/code/notebooks/5-Inpainting.ipynb
+++ b/code/notebooks/5-Inpainting.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces image inpainting of the input images. The implementation incorporates mask selection using the SAM model to select the area to be inpainted and applies diffusion by using Stable Diffusion model. In this notebook, we will provide a step-by-step guide to inpainting image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an  input image"
    ]
   },
   {
@@ -23,7 +30,7 @@
     "from PIL import Image\n",
     "import os, sys\n",
     "\n",
-    "input_path = '../inputs/inpainting/sleep.png'\n",
+    "input_path = '../inputs/restyling/bear.png'\n",
     "input_image = Image.open(input_path)\n",
     "\n",
     "current_dir = os.getcwd()\n",
@@ -59,7 +66,7 @@
    "source": [
     "from mask_sam import get_mask\n",
     "\n",
-    "mask_image = get_mask(input_image, ([[200, 400]]))"
+    "mask_image = get_mask(input_image, ([[300, 200]]))"
    ]
   },
   {
@@ -82,18 +89,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'green frog'"
+    "prompt = \"astronaut, white suit, detailed, high quality, consistent with surroundings, \\\n",
+    "        artstation, 8 k, extremely detailed, ornate, cinematic lighting, vivid\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resize the images and infer the model"
+    "Infer the model on a resized input image"
    ]
   },
   {
@@ -124,10 +132,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(image_resized)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visalise the results"
+    "Visalise the result"
    ]
   },
   {
@@ -136,8 +155,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(image_resized)\n",
-    "plt.axis('off')\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(image_resized)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
