--- a/code/notebooks/6-Outpainting.ipynb
+++ b/code/notebooks/6-Outpainting.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces image outpainting of the input images. The implementation incorporates mask selection using the SAM model to select the area to be kept and applies diffusion by using Stable Diffusion model. In this notebook, we will provide a step-by-step guide to outpainting an image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
@@ -23,7 +30,7 @@
     "from PIL import Image\n",
     "import os, sys\n",
     "\n",
-    "input_path = '../inputs/outpainting/armchair.png'\n",
+    "input_path = '../inputs/background-blurring/aston.png'\n",
     "input_image = Image.open(input_path)\n",
     "\n",
     "current_dir = os.getcwd()\n",
@@ -57,8 +64,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extend_left = 200\n",
-    "extend_right = 200\n",
+    "extend_left = 300\n",
+    "extend_right = 0\n",
     "extend_up = 0\n",
     "extend_down = 0"
    ]
@@ -76,7 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = 'room with grren plants in colorful pots'\n",
+    "prompt = \"highway by the desert, cactus vegetation, close shot, 35 mm, realism, octane render, 8 k, exploration, \\\n",
+    "        cinematic, pixbay, modernist, realistic, unreal engine, hyper detailed, photorealistic, maximum detail, \\\n",
+    "        volumetric light, moody cinematic epic concept art, seamless transition to the environment\"\n",
     "steps = 50"
    ]
   },
@@ -94,6 +103,7 @@
    "outputs": [],
    "source": [
     "from diffusers import StableDiffusionInpaintPipeline\n",
+    "import torch\n",
     "\n",
     "pipe = StableDiffusionInpaintPipeline.from_pretrained(\n",
     "    \"stabilityai/stable-diffusion-2-inpainting\",\n",
@@ -106,7 +116,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extend the image frame, by adding an white image as a base image of the new shape, and past the original image on top of it. Create an outpainting mask."
+    "Extend the image frame by adding an white image of the new shape as a base, and paste the original image on top of it.\n",
+    "Create an outpainting mask."
    ]
   },
   {
@@ -165,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply the image and mask to the model, and reshape the 512 x 512 output to the new image size."
+    "Apply the image and mask to the model, and reshape the $512$ x $512$ output to the new image size."
    ]
   },
   {
@@ -186,6 +197,35 @@
    "source": [
     "plt.imshow(resized_output_image)\n",
     "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visalise the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(resized_output_image)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
