--- a/code/notebooks/7-Restyling.ipynb
+++ b/code/notebooks/7-Restyling.ipynb
@@ -11,12 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define input image and the mask"
+    "### This notebook introduces image restyling of the input images. The implementation applies diffusion by using Stable Diffusion model. In this notebook, we will provide a step-by-step guide to restyle an image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define an input image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,10 +122,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(output_image)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualise the restyled output image"
+    "Visualise the result"
    ]
   },
   {
@@ -127,8 +145,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(output_image)\n",
-    "plt.axis('off')\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(output_image)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
