--- a/code/notebooks/8-Superresolution.ipynb
+++ b/code/notebooks/8-Superresolution.ipynb
@@ -11,19 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Select the input image"
+    "### This notebook introduces superresolution on the input images. The implementation applies diffusion by using Latent Diffusion model with a x4 upscaling factor. In this notebook, we will provide a step-by-step guide to apply superresolution to an image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Select an input image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image\n",
     "import os, sys\n",
     "\n",
-    "input_path = '../inputs/superresolution/jessie.png'\n",
+    "input_path = '../inputs/superresolution/lenna.png'\n",
     "input_image = Image.open(input_path)\n",
     "\n",
     "current_dir = os.getcwd()\n",
@@ -48,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define the number of steps"
+    "Define the number of inference steps"
    ]
   },
   {
@@ -64,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load and preapre the model"
+    "Load and preapre the Latent Diffusion model"
    ]
   },
   {
@@ -74,6 +81,7 @@
    "outputs": [],
    "source": [
     "from diffusers import LDMSuperResolutionPipeline\n",
+    "import torch\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "pipeline = LDMSuperResolutionPipeline.from_pretrained(\"CompVis/ldm-super-resolution-4x-openimages\")\n",
@@ -84,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the model works only for the input shape of 128 x 128, we reisize the image to a width and length being a multiple of 128"
+    "Since the model works only for the input shape of $128$ x $128$, we reisize the image to a width and length being a multiple of $128$"
    ]
   },
   {
@@ -111,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a next step the resized images is split into patches of shape 128 x 128"
+    "As a next step the resized images is split into patches of shape $128$ x $128$"
    ]
   },
   {
@@ -156,10 +164,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(upscaled_image)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visalise the upscaled image"
+    "Visalise the result"
    ]
   },
   {
@@ -168,8 +187,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(upscaled_image)\n",
-    "plt.axis('off')\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
+    "\n",
+    "axs[0].imshow(input_image)\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
+    "\n",
+    "# Display the second image in the right subplot\n",
+    "axs[1].imshow(upscaled_image)\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Final image')\n",
+    "\n",
+    "# Adjust layout to avoid overlap\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
