--- a/code/notebooks/9-Txt2Img.ipynb
+++ b/code/notebooks/9-Txt2Img.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### This notebook introduces Text-to-Image generation. The implementation applies diffusion by using Stable Diffusion model. In this notebook, we will provide a step-by-step guide to generate an image using a text prompt."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Define the image prompt, and additional parameters"
    ]
   },
@@ -20,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"\"\n",
-    "negative_prompt = \"\"\n",
+    "prompt = \"Superman flying through the sky in his blue suit and red cape, looking powerful and heroic\"\n",
+    "negative_prompt = \"bad quality, blurry\"\n",
     "guidance_scale = 7.5\n",
     "steps = 50"
    ]
@@ -58,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visalise the output image"
+    "Visalise the result"
    ]
   },
   {
