notebook mask generation

--- a/code/notebooks/1-Mask-Generation.ipynb
+++ b/code/notebooks/1-Mask-Generation.ipynb
@@ -59,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coord_input_text = \"200, 300; 480, 290\""
+    "coord_input_text = \"200, 300; 440, 295; 480, 290; 510, 295\""
    ]
   },
   {
@@ -131,8 +131,8 @@
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print('device:', device)\n",
-    "model = SamModel.from_pretrained(\"facebook/sam-vit-base\").to(device)\n",
-    "processor = SamProcessor.from_pretrained(\"facebook/sam-vit-base\")"
+    "model = SamModel.from_pretrained(\"facebook/sam-vit-huge\").to(device)\n",
+    "processor = SamProcessor.from_pretrained(\"facebook/sam-vit-huge\")"
    ]
   },
   {
@@ -195,13 +195,13 @@
     "fig, axs = plt.subplots(1, 2, figsize=(10, 5))\n",
     "\n",
     "axs[0].imshow(input_image)\n",
-    "axs[0].axis('off')  # Hide the axis\n",
-    "axs[0].set_title('Original image')  # Optionally set a title\n",
+    "axs[0].axis('off')\n",
+    "axs[0].set_title('Original image')\n",
     "\n",
     "# Display the second image in the right subplot\n",
     "axs[1].imshow(mask_image)\n",
-    "axs[1].axis('off')  # Hide the axis\n",
-    "axs[1].set_title('Mask image')  # Optionally set a title\n",
+    "axs[1].axis('off')\n",
+    "axs[1].set_title('Mask image')\n",
     "\n",
     "# Adjust layout to avoid overlap\n",
     "plt.tight_layout()\n",
