notebooks and readme update

--- a/code/notebooks/2-Background-Blurring.ipynb
+++ b/code/notebooks/2-Background-Blurring.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "input_path = '../inputs/background-blurring/motorcycle.png'\n",
+    "input_path = '../inputs/background-blurring/photographer.png'\n",
     "input_image = Image.open(input_path)"
    ]
   },
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(foreground_img)\n",
+    "plt.imshow(foreground_image)\n",
     "plt.axis('off')\n",
     "plt.show()"
    ]
