--- a/code/notebooks/2-Background-Blurring.ipynb
+++ b/code/notebooks/2-Background-Blurring.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This notebook introduces bacgrkound blurring for input images. This function allows for blurring the selected areas of the image, based on the estimated depth from the Depth-Anything model. The implementation allows for use of given masks, as well as automatic foregound mask generation using the RMBG-1.4 model. In this notebook, we will provide a step-by-step guide to blurring the image using foreground masking."
+    "### This notebook introduces background blurring for input images. This function allows for blurring the selected areas of the image, based on the estimated depth from the Depth-Anything model. The implementation allows for use of given masks, as well as automatic foregound mask generation using the RMBG-1.4 model. In this notebook, we will provide a step-by-step guide to blurring the image using foreground masking."
    ]
   },
   {
