--- a/code/notebooks/5-Inpainting.ipynb
+++ b/code/notebooks/5-Inpainting.ipynb
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visalise the result"
+    "Visualize the result"
    ]
   },
   {
